@@ -1,3 +1,8 @@
+2016-10-02 S. Thiell <sthiell@stanford.edu>
+
+	* Tree.py: in copy mode, do not send tar data to local targets, but only
+	remote ones; this does fix broken pipe errors (ticket #319).
+
 2016-06-18 S. Thiell <sthiell@stanford.edu>
 
 	* Version 1.7.2 released.
